--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.wx</groupId>
-    <artifactId>迪爱生数据平台</artifactId>
+    <artifactId>diaisheng-dataplatform</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
@@ -29,14 +29,6 @@
         <mybatis-generator.version>1.3.5</mybatis-generator.version>
     </properties>
     <dependencies>
-
-
-
-
-
-
-
-
 
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
         <dependency>
@@ -70,15 +62,12 @@
             <artifactId>ezmorph</artifactId>
             <version>1.0.6</version>
         </dependency>
-
-
         <dependency>
             <groupId>net.sf.json-lib</groupId>
             <artifactId>json-lib</artifactId>
             <version>2.4</version>
             <classifier>jdk15</classifier>
         </dependency>
-            
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
@@ -287,11 +276,7 @@
             <version>1.1.7</version>
         </dependency>
 
-        <dependency>
-            　　<groupId>net.coobird</groupId>
-            　　<artifactId>thumbnailator</artifactId>
-            　　<version>0.4.8</version>
-        </dependency>
+
 
         <dependency>
             <groupId>commons-fileupload</groupId>
@@ -322,7 +307,22 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.1.1</version>
+                <configuration>
+
+                    <webXml>src\webapp\WEB-INF\web.xml</webXml>
+
+                </configuration>
+            </plugin>
+
         </plugins>
+
+
+
+
         <pluginManagement>
             <plugins>
                 <!-- 配置Tomcat插件 -->
