--- a/pom.xml
+++ b/pom.xml
@@ -276,7 +276,16 @@
             <version>1.1.7</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.17</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.17</version>
+        </dependency>
 
         <dependency>
             <groupId>commons-fileupload</groupId>
@@ -355,6 +364,8 @@
         </resources>
 
     </build>
+
+
 
 
 
